tests/ui/subcommand_and_methods.stderr
error: proc-macro derive panicked
  --> $DIR/subcommand_and_methods.rs:11:10
   |
11 | #[derive(StructOpt)]
   |          ^^^^^^^^^
   |
   = help: message: methods in attributes are not allowed for subcommand
